--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* Cosmic Theme Styles */
 :root {
-    
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     --cosmic-primary: #6b46c1;
     --cosmic-secondary: #3182ce;
     --cosmic-accent: #00d4ff;
@@ -25,10 +28,10 @@
 
 /* Reset and Base Styles */
 * {
-    -webkit-user-select: none; /* Chrome/Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE/Edge */
-    user-select: none; 
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -48,6 +51,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     line-height: 1.2;
     margin-bottom: 1rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 h1 { font-size: 2.5rem; font-family: 'Orbitron', sans-serif; }
@@ -2722,4 +2729,5 @@ h3 { font-size: 1.5rem; }
         gap: 0.5rem;
     }
 }
+
 
