--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ body {
     overflow-x: hidden;
     line-height: 1.6;
     font-size: 16px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* Typography */
@@ -2729,5 +2733,6 @@ h3 { font-size: 1.5rem; }
         gap: 0.5rem;
     }
 }
+
 
 
